# OS_HW2_1

./: CMakeLists.txt  README.md  SyncCout.h  choose_out.h  constants.h  empty.h  handshake.h  master.cpp  merge_outputs.py  producer.cpp  resources.cpp  smokers.cpp
name_generator/: NameGenerator.cpp  NameGenerator.h
pipe/: base.h  get.h  posix_mq_based.cpp  semaphore_based.cpp  sysv_mq_based.cpp
semaphore/: base.h  get.h  posix_named.cpp  posix_unnamed.cpp  sysv.cpp
shared_memory/: base.h  get.h  posix.cpp  sysv.cpp
tests/10/normal_finish/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/10/premature_termination/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/45/normal_finish/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/45/premature_termination/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/67/normal_finish/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/67/premature_termination/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/8/normal_finish/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/8/premature_termination/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/9/normal_finish/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
tests/9/premature_termination/: master.txt  merged.txt  producer.txt  resources.txt  smokers.txt
